feat(backend): add native platform resolution and migrate C backend tests
- expand TargetPlatform with mainstream OS/arch combinations and zig target triplets
- add TargetPlatform.getNativePlatform() based on os.name/os.arch with Android runtime detection
- make ZigCcCompiler derive output filename and zig -target from TargetPlatform metadata
- migrate C backend build/engine integration tests to TargetPlatform.getNativePlatform()